added behat tests

--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -541,6 +541,7 @@ default:
           contexts:
             - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\CustomerServiceFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\ContactFeatureContext
         authorization_server:
           paths:
             - "%paths.base%/Features/Scenario/AuthorizationServer"
