--- a/src/PrestaShopBundle/Resources/config/services/core/domain/customer_service.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/domain/customer_service.yml
@@ -81,3 +81,4 @@ services:
       - '@router'
     tags:
       - name: tactician.handler
+        command: PrestaShop\PrestaShop\Core\Domain\CustomerService\Query\GetCustomerServiceSummary
