Enable unified combination command builder to integrate it in the forms, clean the old definitions

--- a/src/PrestaShopBundle/Resources/config/services/core/command_bus.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/command_bus.yml
@@ -7,6 +7,8 @@ services:
     arguments:
       - '@tactician.commandbus.default'
 
+  PrestaShop\PrestaShop\Core\CommandBus\CommandBusInterface: '@prestashop.core.command_bus'
+
   prestashop.core.query_bus:
     parent: 'prestashop.core.command_bus'
     public: true
