--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -31,11 +31,9 @@ services:
     arguments:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
-      - "@=service('prestashop.adapter.legacy.context').getContext().shop.id"
-      - "@=service('prestashop.adapter.legacy.context').getContext().shop.id_shop_group"
-      - "@=service('prestashop.adapter.legacy.context').getContext().shop.getGroup().share_stock"
       - '@prestashop.core.grid.query.filter.doctrine_filter_applicator'
       - '@prestashop.adapter.legacy.configuration'
+      - '@prestashop.adapter.shop.repository.shop_group_repository'
     public: true
 
   prestashop.core.grid.query_builder.product_light:
