Handle product stock for shared group stock

--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_stock.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_stock.yml
@@ -64,3 +64,4 @@ services:
       - '@prestashop.adapter.product.stock.repository.movement_reason_repository'
       - '@prestashop.adapter.legacy.configuration'
       - '@prestashop.adapter.hook.manager'
+      - '@prestashop.adapter.shop.repository.shop_group_repository'
