--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -448,3 +448,11 @@ services:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
       - '@=service("prestashop.adapter.shop.context").getContextListShopID()'
     public: true
+
+  PrestaShop\PrestaShop\Core\Grid\Query\AuthorizedApplicationQueryBuilder:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Query\AuthorizedApplicationQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    public: false
+    autowire: true
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
