--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -541,3 +541,13 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Grid\Data\Factory\CustomerThreadGridDataFactoryDecorator'
     arguments:
       - '@prestashop.core.grid.data.factory.customer_thread'
+
+  prestashop.core.grid.data_factory.authorized_application:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    public: false
+    arguments:
+      - '@PrestaShop\PrestaShop\Core\Grid\Query\AuthorizedApplicationQueryBuilder'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'authorized_application'
+
