--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,18 +2,14 @@ name: Lint
 on: [ push, pull_request ]
 permissions:
   contents: read
-
+concurrency:
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 jobs:
   stylelint:
     name: SCSS Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - uses: actions/checkout@v3
 
       - name: Setup Node
@@ -34,12 +30,6 @@ jobs:
     name: ESLint
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - uses: actions/checkout@v3
 
       - name: Setup Node
@@ -66,12 +56,6 @@ jobs:
     name: YAML Lint (Symfony Check)
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -106,12 +90,6 @@ jobs:
     name: YAML Lint (YamlLint Check)
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
@@ -136,12 +114,6 @@ jobs:
     name: Twig Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
