--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -2,7 +2,9 @@ name: Js
 on: [ push, pull_request ]
 permissions:
   contents: read
-
+concurrency:
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 jobs:
   js-unit-tests:
     runs-on: ubuntu-latest
@@ -11,12 +13,6 @@ jobs:
       matrix:
         js: [ '16' ]
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
