--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,20 +2,16 @@ name: PHP
 on: [ push, pull_request ]
 permissions:
   contents: read
+concurrency:
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 jobs:
   php-cs-fixer:
     permissions:
-      actions: write  # for styfle/cancel-workflow-action to cancel/stop running workflows
       contents: read  # for actions/checkout to fetch code
     name: PHP CS Fixer
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -47,7 +43,6 @@ jobs:
         run: composer normalize --dry-run --no-check-lock
   phpstan:
     permissions:
-      actions: write  # for styfle/cancel-workflow-action to cancel/stop running workflows
       contents: read  # for actions/checkout to fetch code
     name: PHP Static Analysis
     runs-on: ubuntu-latest
@@ -56,12 +51,6 @@ jobs:
         php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
       fail-fast: false
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -91,7 +80,6 @@ jobs:
         run: ./vendor/bin/phpstan analyse -c phpstan.neon.dist
   phpunit:
     permissions:
-      actions: write  # for styfle/cancel-workflow-action to cancel/stop running workflows
       contents: read  # for actions/checkout to fetch code
     name: PHPUnit
     runs-on: ubuntu-latest
@@ -100,11 +88,6 @@ jobs:
         php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
       fail-fast: false
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
