--- a/.github/workflows/sanity-productV2.yml
+++ b/.github/workflows/sanity-productV2.yml
@@ -10,6 +10,9 @@ on:
       - src/Core/Domain/Product/**
       - src/Adapter/Product/**
       - src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/**
+concurrency:
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 jobs:
   sanity:
     runs-on: ubuntu-latest
@@ -19,12 +22,6 @@ jobs:
         php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
       fail-fast: false
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - uses: actions/checkout@v3
 
       - name: Setup environment
