--- a/.github/workflows/ui_tests_code_checks.yml
+++ b/.github/workflows/ui_tests_code_checks.yml
@@ -11,6 +11,10 @@ defaults:
 permissions:
   contents: read
 
+concurrency:
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   ESLint:
@@ -22,12 +26,6 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'TE')
 
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Checkout the repository
         uses: actions/checkout@v3
 
@@ -59,12 +57,6 @@ jobs:
     name: Checking Steps identifiers
 
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          all_but_latest: true
-          access_token: ${{ github.token }}
-
       - name: Checkout the repository
         uses: actions/checkout@v3
 
