handle details part for combination multishop

--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -26,7 +26,7 @@ services:
   prestashop.adapter.product.combination.query_handler.get_combination_for_editing_handler:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\QueryHandler\GetCombinationForEditingHandler
     arguments:
-      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository'
       - '@prestashop.core.product.combination.name_builder.combination_name_builder'
       - '@prestashop.adapter.product.stock.repository.stock_available_repository'
       - '@prestashop.adapter.attribute.repository.attribute_repository'
@@ -78,8 +78,7 @@ services:
     alias: PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationRepository
     deprecated: ~
 
-  prestashop.adapter.product.combination.repository.combination_multi_shop_repository:
-    class: PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository
+  PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
@@ -102,14 +101,14 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Create\CombinationCreator
     arguments:
       - '@prestashop.core.product.combination.generator.combination_generator'
-      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository'
       - '@prestashop.adapter.product.repository.product_multi_shop_repository'
       - '@prestashop.adapter.product.stock.repository.stock_available_multi_shop_repository'
       - '@prestashop.adapter.product.combination.update.default_combination_updater'
 
   PrestaShop\PrestaShop\Adapter\Product\Combination\Update\DefaultCombinationUpdater:
     arguments:
-      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository'
       - '@prestashop.adapter.product.repository.product_multi_shop_repository'
 
   prestashop.adapter.product.combination.update.default_combination_updater:
@@ -120,7 +119,7 @@ services:
     class: PrestaShop\PrestaShop\Adapter\Product\Combination\Update\CombinationDeleter
     arguments:
       - '@prestashop.adapter.product.repository.product_multi_shop_repository'
-      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Combination\Repository\CombinationMultiShopRepository'
       - '@prestashop.adapter.product.combination.update.default_combination_updater'
 
   prestashop.adapter.product.combination.update.combination_images_updater:
