--- a/composer.json
+++ b/composer.json
@@ -41,14 +41,14 @@
         "friendsofsymfony/jsrouting-bundle": "^2.4",
         "geoip2/geoip2": "~2.4.2",
         "greenlion/php-sql-parser": "^4.3",
-        "guzzlehttp/guzzle": "^7.4",
+        "guzzlehttp/guzzle": "^7.5",
         "incenteev/composer-parameter-handler": "~2.0",
         "ircmaxell/password-compat": "^1.0.4",
         "ircmaxell/random-lib": "^1.2.0",
         "jakeasmith/http_build_url": "^1",
         "lcobucci/jwt": "dev-3.4.6-patch as 3.4.6",
         "league/oauth2-server": "^8.3",
-        "league/tactician-bundle": "^1.0",
+        "league/tactician-bundle": "^1.4",
         "martinlindhe/php-mb-helpers": "^0.1.6",
         "matthiasmullie/minify": "~1.3.0",
         "mobiledetect/mobiledetectlib": "~2.8.34",
@@ -57,7 +57,7 @@
         "nyholm/psr7": "^1.5",
         "pear/archive_tar": "^1.4.12",
         "pelago/emogrifier": "^v5.0.1",
-        "phpoffice/phpspreadsheet": "~1.5",
+        "phpoffice/phpspreadsheet": "^1.19",
         "prestashop/blockreassurance": "^5.1",
         "prestashop/blockwishlist": "^2.0",
         "prestashop/circuit-breaker": "^4.0",
@@ -138,7 +138,7 @@
         "symfony/property-access": "^4",
         "symfony/psr-http-message-bridge": "^2.1",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/symfony": "^4.4",
+        "symfony/symfony": "^4.4.49",
         "tecnickcom/tcpdf": "^6.2.12",
         "tijsverkoyen/css-to-inline-styles": "^2.2",
         "twig/twig": "^3.0"
@@ -150,7 +150,7 @@
         "johnkary/phpunit-speedtrap": "^3",
         "mikey179/vfsstream": "^1.6",
         "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan": "^1",
+        "phpstan/phpstan": "^1.9.3",
         "phpunit/phpunit": "~8.5.16 || ~9.5.10",
         "spaze/phpstan-disallowed-calls": "^2.10",
         "symfony/phpunit-bridge": "^3.4"
